--- a/conclusion.tex
+++ b/conclusion.tex
@@ -13,7 +13,7 @@ The computations are defined in the form of scripts in the Python language. At t
 
 All scripts, containing over 5000 lines of Python code in total, were published online free of charge \cite{dominec2014_meep_metamaterials} with the hope that they would be reused for future numerical research.
 
-In the Numerical chapter, the internal operation of the finite-difference time-domain computation method is described in detail. Particular attention was given to realistic definition of Lorentz-Drude models for dielectrics and metals, including author's empirical rules ensuring the numerical stability of the simulation. 
+In the Numerical chapter, the internal operation of the finite-difference time-domain computation method is described in detail. Particular attention was given to realistic definition of Lorentz-Drude models for dielectrics and metals, including author's empirical rules ensuring the numerical stability of the simulation. % +?
 
 %		All referred numerical methods, FDTD, PWEM and TMM, were tested also to give compatible and plausible results under oblique incidence and both TE/TM polarisations. 
 %  * We validated these FDTD computations against
@@ -23,32 +23,54 @@ In the Numerical chapter, the internal operation of the finite-difference time-d
 %  *  proposes a novel temporal shape for a wave source in FDTD that yields a flat-top spectrum in a well-defined 
 %		interval of frequencies
 
-The second part of the section describes how the same numerical algorithm can be used in different setups that provide physical information about the structure: the customary \textit{scattering-parameter method} is elaborated including its limitations and pitfalls, and finally it is compared to the less efficient, but more robust \textit{current-driven homogenisation} method. Both methods were extensively employed and compared in the results.
+The second part of the section describes how the same numerical algorithm can be used in different geometries to retrieve physical properties of the structure: the customary \textit{scattering-parameter method} is elaborated including its limitations and pitfalls, and finally it is compared to the less efficient, but more robust \textit{current-driven homogenisation} method. Both methods were extensively employed and compared in the results.
 
-The inherent ambiguity of the scattering-parameter method is often cited in the literature. We resolved in an original way, based on the purely mathematical consideration of the arccosine branch cuts in the complex plane. The correction algorithm was incorporated in the simulation post-processing scripts and its application on all presented results proves that it works reliably. The current-driven homogenisation also required 
+The inherent ambiguity of the scattering parameters method is often cited in the literature, both numerical and experimental. We resolved it in an original way, based on the purely mathematical consideration of the arccosine discontinuities in the complex plane. The correction algorithm was incorporated in the simulation post-processing scripts and its application on all presented results proves that it works reliably. 
+% The current-driven homogenisation required to develop 
 %	  2) by mathematical means, the phase-ambiguity of the retrieved effective index by the s-parameter method 
 
-
-
-
 \paragraph{Summary of results}
-%  * RESULTS filled the demand for some starting overview of the common structures.  in a level of detail and
-%    didactic approach that the author felt to be missing in the available literature. 
-%	- attempt to compare most metamaterial structures
+The Results chapter fills the demand for some starting overview of the electromagnetic behaviour of ten common classes of metamaterials, in a didactic approach that the author felt to be missing in the available literature. %Where relevant, it also documents general 
 
-
-%	- some of them have Neff<0, but the regions of applicability for eeff nor meff is much more restricted 
-%		to regions of |Neff'|~0
-
-%     When a scientific method is used beyond its scope, sometimes it results in an obvious error like failure of convergence. The scattering parameter method is, unfortunately, more robust and it always assigns a finite slab of a metamaterial with some effective parameters. Due care must be paid to verify that the results make physical sense; we suggested that their compliance to Kramers-Kronig relations, absence of skips and independence of the number of simulated unit cells  %TODO 
+\begin{enumerate}
+\item{It starts with an one-dimensional photonic crystal, which can be viewed as the simplest nontrivial periodic structure. Its dispersion curves consist of alternating photonic bands and band-gaps, but no individual resonance can occur. The conditions for formation of a zero-width photonic band gap are shown in parametric scans. The low-frequency and high-frequency limits for the effective index of refraction are demonstrated.
+} 
+\item{Replacing a dielectric layer with an array of metallic wires parallel to the electric field does not qualitatively change the high-frequency behaviour, but below the plasma frequency, it introduces plasma-like response with negative effective permittivity. The resulting plasma frequency is determined by the geometry; two plots compare the numeric results with analytic models with a good match.
+} 
+\item{Dividing the wires into a periodical array of cut-wires introduces the individual resonances; its imprint on the effective parameter spectra are described in detail, since it is characteristic also for resonances in all following structures. Parametric scans through wire radius and cut distance are shown to have nontrivial effects on the resonance frequency. Our experimental data from cut-wire array on silicon substrate are compared to numerical model, and the difference is explained as an effect of losses in the sample. 
+} 
+\item{The individual resonances with an electric dipole are compared to their counterparts with a magnetic dipole at the example of split-ring resonators. The most iconic structure with a single splitting in the ring is asymmetric, and it is demonstrated that all homogenization methods that assume symmetric parameters would more or less fail at this structure. The symmetric-splitting version, however, can be homogenized to obtain negative permeability. Further a combination of the double-split ring resonator with wire array is shown to yield the negative index of refraction with compatible results between the s-parameters method a current-driven homogenization.
+} 
+\item{On the contrary, the next chapter is included to illustrate a clash between these two homogenization setups. When a central shunt conductor is added to a symmetric split-ring resonator, the electric type resonance is found as the first one in the spectrum. By continuous changes in the geometry, we demonstrate that the electric and magnetic resonances can be tuned against each other, and it might be expected they would form a region of negative refractive index. Nonetheless, the narrow resonance line shape combined with moderate spatial dispersion cause the dispersion curves to bend into a concave shape and the scattering-parameter method eventually fails to determine effective index of refraction, as is illustrated by four detailed plots.
+} 
+\item{Dielectric spherical resonators are shown to exhibit individual resonances of Mie type, the first of which is analogous to the resonance in split-ring resonator. With the exactly defined model of titanium dioxide the sphere is made of, we can deduce minimum dissipative losses that can be achieved in experiment and show what impact they have on the resonance spectra. Further we accompany the computed spectra with our experimental results, arguing that the substantial deviation thereof arises from inhomogeneity of the resonators in the sample. Taking the size dispersion into account gives a reasonable match with experiment. Extended sieving of the spheres improves the resonance deeper, but no negative permeability is reached.
+} 
+\item{The spectra of dielectric rods parallel to the magnetic field are compared to that of dielectric spheres, pointing out their similarity. The resonant modes for low- and high-permittivity dielectrics are compared to illustrate that continuous changes in the dielectric permittivity lead to a qualitative change -- a crossover of the Mie and Bragg resonances in the spectra.
+} 
+\item{The qualitative changes in behaviour are even more complex with the dielectric rods parallel to the electric field. Depending on the filling fraction and permittivity contrast, the structure can behave in different portions of spectra similar either to the one-dimensional photonic crystal, wire array, or exhibit negative index of refraction. By extensive parametric scans we demonstrate that, independent of geometry, the desirable latter operation can in no way be achieved when the dielectric contrast is less than roughly 50, which precludes the use of any low-loss material commonly used in photonics. 
+} 
+\item{
+} 
+\item{
+}
+\end{enumerate}
 
 
 \begin{equation}
 \begin{array}{c} \text{negative}\\ \text{refraction} \end{array}
 \quad\not\Rightarrow\quad  \exists \Neff' < 0 
 \quad\not\Rightarrow\quad \begin{array}{c} \text{s-parameter}\\ \text{method}\\ \text{applicable}  \end{array}
-\quad\not\Rightarrow\quad \exists \eeff'<0, \meff'<0  
+\quad\not\Rightarrow\quad \begin{array}{c} \exists \eeff'<0,\\ \exists\meff'<0  \end{array} 
 \label{eq_implications}\end{equation} % 
+
+
+
+%	- some of them have Neff<0, but the regions of applicability for eeff nor meff is much more restricted 
+%		to regions of |Neff'|~0
+
+
+
+%     When a scientific method is used beyond its scope, sometimes it results in an obvious error like failure of convergence. The scattering parameter method is, unfortunately, more robust and it always assigns a finite slab of a metamaterial with some effective parameters. Due care must be paid to verify that the results make physical sense; we suggested that their compliance to Kramers-Kronig relations, absence of skips and independence of the number of simulated unit cells  %TODO 
 
 %   - implications opposite to these shown in relation (\ref{eq_implications}) may not hold, either. 
 %	- Some structures may have well-defined mechanisms electric and magnetic individual resonances, yet the index of refraction $\Neff$ is not applicable. This was shown at the example	the resonances are close enough in frequency, requiring the use of spatial-dispersive theory.
@@ -124,7 +146,13 @@ The obstacles which the metamaterial research faces nowadays may be overcome in 
 %		interpreting it on the basis of a well-developed theory (electrodynamics of homogeneous media). In future, this trend may be opposite --
 %		that is, new theory motivated by the metamaterial research may find its application on other phenomena.
 %		One example may be the theory of strongly hyperbolic media, which turns out to be fundamental for electrodynamics in extremely strong magnetic fields \cite{smolyaninov2011vacuum}.
-In line with the quotation from the start of this section, this thesis mainly aims to %promote prudent and proper theoretical description of electromagnetism of periodic structures to 
+
+This thesis was written with the belief that the research of metamaterials and photonic crystals should not be restricted to the painstaking struggle for their notorious -- but maybe elusive -- applications. The interaction of electromagnetic waves with periodically structured matter deserves to be % TODO
+described by a generic enough theory.
+
+In line with the quotation from the start of this section, we should be prepared, and even longing for, the \textit{endless immensity} of different 
+ways how the phenomena can find new interpretations and be connected to new, and 
+%promote prudent and proper theoretical description of electromagnetism of periodic structures to 
 % TODO 
 % contribute to the \textit{endless immensity} of the physics of a wave interacting with periodic structures.
 
