--- a/result.tex
+++ b/result.tex
@@ -1009,7 +1009,7 @@ A sufficiently high permittivity can be found in the microwave and terahertz ran
 \FloatBarrier %====================================================================================================
 
 %}}}
-\section{Metallic sheet with slits} \label{section_eot}
+\section{Metallic sheet with slits} \label{section_eot}%{{{
 \begin{figure}[h!]  %{{{ yslit_xcomparison_d20
 	\caption{Amplitude of \textbf{(a)}  reflectance and \textbf{(b)} transmittance of a single sheet of gold $d_z = 20$ $\mu$m thick with different width of slits $d_x$. Unit cell size $a = 100$ $\mu$m and grid resolution was 1 $\mu$m. } \label{fg_yslit_xcomparison_d20} \centering \vspace{-3mm} 
 \begin{tabular}{r}
@@ -1112,7 +1112,7 @@ The s-parameter method computes the same metallic structure, and only the phase 
 
 %}}}
 
-
+%}}}
 
 \FloatBarrier %====================================================================================================
 \add{
@@ -1296,7 +1296,6 @@ This way, it also broke the symmetry of the first predominantly quadrupole mode,
 %}}}
 
 
-%electric SRRs (eSRRs) [29], [30], 
 % pairs of rods [10], [12], [31], pair of crosses [32]
 % Aleian 2012 Plasmonic Au SiO2 nanoparticles
 
