--- a/result.tex
+++ b/result.tex
@@ -1113,6 +1113,43 @@ The s-parameter method computes the same metallic structure, and only the phase 
 %}}}
 
 %}}}
+\begin{figure}[t] % fg_cdh_yslit %{{{
+	\caption{Current-driven homogenization results for \textbf{(a)} an infinite array of metallic slabs $20$ $\mu$m thick of periodicity $a_z = 60$ $\mu$m, divided by slits of $d_x = 20$ $\mu$m with the periodicity $a_x = 100$ $\mu$m. \textbf{(b)} } \label{fg_cdh_yslit} 
+	% CDH_Fishnet_xholesize\=2.000e-05_simtime\=2.000e-10_resolution\=4.000e-06_cellsize\=6.000e-05_cellsizexy\=1.000e-04_slabthick\=2.000e-05_yholesize\=inf.pdf
+	\centering 
+	\vspace{.1\textwidth}
+	\begin{overpic}[width=.48\textwidth]{img-cdh/yslit_csz60u.pdf}  
+	\put(1,96) {\textbf{(a)}} 
+	%\put(18,100){\includegraphics[width=.1\textwidth]{img/drawing_emcSRRpad.pdf}} todo sketch
+	%\put(30,105){$\rho_c = 6$ $\upmu$m}
+	\end{overpic}
+	\begin{overpic}[width=.48\textwidth]{img-cdh/FnNavarroCia.pdf}  
+	% CDH Fishnet xholesize=1.100e-04 simtime=2.000e-10 resolution=5.000e-06 cellsize=5.250e-05 cellsizexy=2.500e-04 cornerradius=5.500e-05 slabthick=1.000e-05 yholesize=1.100e-04.pdf
+	%\put(18,100){\includegraphics[width=.1\textwidth]{img/drawing_emcSRRpad.pdf}} todo sketch
+	%\put(30,105){$\rho_c = 8$ $\upmu$m}
+	\put(1,96) {\textbf{(b)}} 
+	\end{overpic}
+\end{figure}
+%}}}
+\begin{figure}[t] % fg_cdh_comp %{{{
+	\caption{Current-driven homogenization results for two samples of fishnets shown in Fig. \ref{fg_fishnet28_photo};  \textbf{(a)} holes of $180\times 200$ $\mu$m,  \textbf{(b)} holes of $230\times 255$ $\mu$m} \label{fg_cdh_fncomp} 
+	% CDH_Fishnet_xholesize\=2.000e-05_simtime\=2.000e-10_resolution\=4.000e-06_cellsize\=6.000e-05_cellsizexy\=1.000e-04_slabthick\=2.000e-05_yholesize\=inf.pdf
+	\centering 
+	\vspace{.1\textwidth}
+	\begin{overpic}[width=.48\textwidth]{img-cdh/RealisticFn_180x200_cs75.pdf}  
+	\put(1,96) {\textbf{(a)}} 
+	% RealisticFn_180x200/CDH_Fishnet_xholesize\=1.800e-04_simtime\=2.000e-10_resolution\=1.000e-05_cellsize\=7.500e-05_cellsizexy\=3.000e-04_slabthick\=2.000e-05_yholesize\=2.000e-04
+	%\put(18,100){\includegraphics[width=.1\textwidth]{img/drawing_emcSRRpad.pdf}} todo sketch
+	%\put(30,105){$\rho_c = 6$ $\upmu$m}
+	\end{overpic}
+	\begin{overpic}[width=.48\textwidth]{img-cdh/RealisticFn_230x255_cs75.pdf}  
+	\put(1,96) {\textbf{(b)}} 
+	% RealisticFn_230x255/CDH_Fishnet_xholesize\=2.300e-04_simtime\=2.000e-10_resolution\=1.000e-05_cellsize\=7.500e-05_cellsizexy\=3.000e-04_slabthick\=2.000e-05_yholesize\=2.550e-04
+	%\put(18,100){\includegraphics[width=.1\textwidth]{img/drawing_emcSRRpad.pdf}} todo sketch
+	%\put(30,105){$\rho_c = 8$ $\upmu$m}
+	\end{overpic}
+\end{figure}
+%}}}
 
 \FloatBarrier %====================================================================================================
 \add{
@@ -1192,23 +1229,6 @@ The phenomenon was thus named as \textit{extraordinary transmission} \cite{ebbes
 
 Periodical arrangement of the holes is equivalent to structuring of the surroundings of a single hole. In line with the already demonstrated resonance in a metallic sheet with infinite slits, the metallic sheet with holes exhibits a resonance slightly below the diffraction edge which leads to a great drop in reflection. The exact behaviour of the structure is determined by the  metal thickness, dimensions of the holes, their spacing in the $x$-$y$ plane and the spacing of the metallic sheets along the $z$-axis.
 
-%}}}
-\begin{figure}[t] % fg_cdh_yslit %{{{
-	\caption{Current-driven homogenization results for \textbf{(a)} an infinite array of metallic slabs divided by slits of $d_x = 20$ $\mu$m and with  \textbf{(b)} $\rho_c = 8$.. Both simulations share the metallic slab thickness $d_z = 20$ $\mu$m and transverse unit cell size $a_x  = a_x = 100$ $\mu$m. } \label{fg_cdh_yslit} 
-	% CDH_Fishnet_xholesize\=2.000e-05_simtime\=2.000e-10_resolution\=4.000e-06_cellsize\=6.000e-05_cellsizexy\=1.000e-04_slabthick\=2.000e-05_yholesize\=inf.pdf
-	\centering 
-	\vspace{.1\textwidth}
-	\begin{overpic}[width=.48\textwidth]{img-cdh/yslit_csz60u.pdf}  
-	\put(1,96) {\textbf{(a)}} 
-	%\put(18,100){\includegraphics[width=.1\textwidth]{img/drawing_emcSRRpad.pdf}} todo sketch
-	%\put(30,105){$\rho_c = 6$ $\upmu$m}
-	\end{overpic}
-	%\begin{overpic}[width=.48\textwidth]{img-cdh/cdh_emcSRRcap08.pdf}  
-	%\put(18,100){\includegraphics[width=.1\textwidth]{img/drawing_emcSRRpad.pdf}} todo sketch
-	%\put(30,105){$\rho_c = 8$ $\upmu$m}
-	%\put(1,96) {\textbf{(b)}} 
-	%\end{overpic}
-\end{figure}
 %}}}
 \paragraph{Negative index of refraction}%{{{
 Under a correct choice of parameters of the structure, the re-radiated wave has an opposite sign to the incoming one. In 2003, the % TODO
@@ -1291,7 +1311,7 @@ For simulation of the fishnet, different grid resolutions were used. While usual
 
 In most terahertz transmittance spectra of fishnets, a relatively sharp notch between 0.5 and 1.0 THz was observed. The discretisation error has helped to explain it, since it broke the twofold mirror symmetry of the fishnet hole. 
 
-This way, it also broke the symmetry of the first predominantly quadrupole mode, introducing a slight electric dipole into its field pattern  (see Fig. \ref{fg_fnquadrup}). As a result, the quadrupole started to coupling with the incident plane wave, and very narrow resonances emerged also in the simulated spectra in Fig. \ref{fg_expe_fishnets}, at 880 and 710 GHz, respectively. These values, still without any user intervention, the experimentally observed resonance notches close to these frequencies as a result of excitation of a quadrupole resonance.   % todo these resonances can be also observed in the CDH plots in Fig. \ref{fg_fishnet_cdh}a,b
+This way, it also broke the symmetry of the first predominantly quadrupole mode, introducing a slight electric dipole into its field pattern  (see Fig. \ref{fg_fnquadrup}). As a result, the quadrupole couples with the incident plane wave, and very narrow resonances emerged also in the simulated spectra in Fig. \ref{fg_expe_fishnets}, at 880 and 710 GHz, respectively. These values, still without any user intervention, the experimentally observed resonance notches close to these frequencies as a result of excitation of a quadrupole resonance.   % todo these resonances can be also observed in the CDH plots in Fig. \ref{fg_fishnet_cdh}a,b
 
 %}}}
 
